--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hng-auth",
   "version": "1.0.0",
-  "description": "Basic Passport local strategy auth",
+  "description": "Basic Passport local strategy auth - 01",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
